--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "unpkg": "./dist/higlass-dynseq.umd.js",
   "jsdelivr": "./dist/higlass-dynseq.umd.js",
   "scripts": {
-    "build": "microbundle -f modern,esm,cjs && microbundle -f umd --external none --no-sourcemap",
-    "prepare": "yarn build"
+    "build": "microbundle -f modern,esm,cjs && microbundle -f umd --external none",
+    "watch": "microbundle  watch -f umd --external none",
+    "prepare": "yarn build",
+    "server": "live-server ."
   },
   "dependencies": {
-    "higlass-register": "^0.3.0"
+    "higlass-register": "^0.3.0",
+    "live-server": "^1.2.1"
   },
   "devDependencies": {
+    "budo": "^11.6.4",
     "microbundle": "^0.13.3"
   }
 }
